Добавил 2 вида сортировки в первую лабу. Сборка make.

--- a/projects/lab01/Makefile
+++ b/projects/lab01/Makefile
@@ -4,7 +4,7 @@ SUBDIRS = task13
 .PHONY: subdirs $(SUBDIRS)
 
 subdirs: $(SUBDIRS)
-	g++ -o ./_build/awesome-sort _build/awesome-sort.o ./_build/test-sort.a
+	g++ -o ./_build/test-sort _build/test-sort.o ./_build/awesome-sort.a
 
 $(SUBDIRS):
 	$(MAKE) -C $@
