--- a/projects/lab01/task13/awesome-sort/Makefile
+++ b/projects/lab01/task13/awesome-sort/Makefile
@@ -5,5 +5,5 @@ all: awesome-sort.a
 awesome-sort.a: awesome-sort.o
 	ar rc ../../_build/$@ ../../_build/$<
 
-awesome-sort.o: awesome-sort.cpp awesome-sort.h
+awesome-sort.o: awesome-sort.cpp
 	g++ -c -o ../../_build/$@ $<
