--- a/projects/lab01/task13/Makefile
+++ b/projects/lab01/task13/Makefile
@@ -4,6 +4,7 @@ SUBDIRS = awesome-sort test-sort
 .PHONY: subdirs $(SUBDIRS)
 
 subdirs: $(SUBDIRS)
+	g++ -o ../_build/test-sort ../_build/test-sort.o ../_build/awesome-sort.a
 
 $(SUBDIRS):
 	$(MAKE) -C $@
