--- a/projects/lab01/task13/test-sort/Makefile
+++ b/projects/lab01/task13/test-sort/Makefile
@@ -3,4 +3,5 @@ all: test-sort.o
 INC=-I../awesome-sort/
 
 test-sort.o: test-sort.cpp
-	g++ -c -o ../../_build/$@  $(INC) $<
+	mkdir -p $(OUT_DIR)
+	g++ -c -o $(OUT_DIR)/$@  $(INC) $<
