--- a/projects/lab01/task13/Makefile
+++ b/projects/lab01/task13/Makefile
@@ -3,10 +3,13 @@ SUBDIRS = awesome-sort test-sort
 
 .PHONY: subdirs $(SUBDIRS)
 
+OUT_DIR := $(CURDIR)/../_build/make-build
+
 subdirs: $(SUBDIRS)
-	g++ -o ../_build/test-sort ../_build/test-sort.o ../_build/awesome-sort.a
+	mkdir -p $(OUT_DIR)
+	g++ -o $(OUT_DIR)/test-sort $(OUT_DIR)/test-sort.o $(OUT_DIR)/awesome-sort.a
 
 $(SUBDIRS):
-	$(MAKE) -C $@
+	$(MAKE) -C $@ OUT_DIR=$(OUT_DIR)
 
 test-sort: awesome-sort
