--- a/projects/lab01/task13/awesome-sort/Makefile
+++ b/projects/lab01/task13/awesome-sort/Makefile
@@ -3,7 +3,9 @@
 all: awesome-sort.a
 
 awesome-sort.a: awesome-sort.o
-	ar rc ../../_build/$@ ../../_build/$<
+	mkdir -p $(OUT_DIR)
+	ar rc $(OUT_DIR)/$@ $(OUT_DIR)/$<
 
 awesome-sort.o: awesome-sort.cpp
-	g++ -c -o ../../_build/$@ $<
+	mkdir -p $(OUT_DIR)
+	g++ -c -o $(OUT_DIR)/$@ $<
