Добавил $(CXX) и _out цель в lab01.

--- a/projects/lab01/task13/Makefile
+++ b/projects/lab01/task13/Makefile
@@ -5,11 +5,13 @@ SUBDIRS = awesome-sort test-sort
 
 OUT_DIR := $(CURDIR)/../_build/make-build
 
-subdirs: $(SUBDIRS)
-	mkdir -p $(OUT_DIR)
-	g++ -o $(OUT_DIR)/test-sort $(OUT_DIR)/test-sort.o $(OUT_DIR)/awesome-sort.a
+subdirs: $(SUBDIRS) | _out
+	$(CXX) -o $(OUT_DIR)/test-sort $(OUT_DIR)/test-sort.o $(OUT_DIR)/awesome-sort.a
 
 $(SUBDIRS):
 	$(MAKE) -C $@ OUT_DIR=$(OUT_DIR)
+
+_out:
+	mkdir -p $(OUT_DIR)
 
 test-sort: awesome-sort
