--- a/projects/lab01/task13/test-sort/Makefile
+++ b/projects/lab01/task13/test-sort/Makefile
@@ -2,6 +2,8 @@ all: test-sort.o
 
 INC=-I../awesome-sort/
 
-test-sort.o: test-sort.cpp
+test-sort.o: test-sort.cpp | _out
+	$(CXX) -c -o $(OUT_DIR)/$@  $(INC) $<
+
+_out:
 	mkdir -p $(OUT_DIR)
-	g++ -c -o $(OUT_DIR)/$@  $(INC) $<
