--- a/projects/lab01/task13/awesome-sort/Makefile
+++ b/projects/lab01/task13/awesome-sort/Makefile
@@ -1,11 +1,11 @@
 # Makefile for awesome-sort
-
 all: awesome-sort.a
 
-awesome-sort.a: awesome-sort.o
-	mkdir -p $(OUT_DIR)
+awesome-sort.a: awesome-sort.o | _out
 	ar rc $(OUT_DIR)/$@ $(OUT_DIR)/$<
 
-awesome-sort.o: awesome-sort.cpp
+awesome-sort.o: awesome-sort.cpp | _out
+	$(CXX) -c -o $(OUT_DIR)/$@ $<
+
+_out:
 	mkdir -p $(OUT_DIR)
-	g++ -c -o $(OUT_DIR)/$@ $<
