lab01: Добавил CPPFLAGS, добавил CXXFLAGS. Добавил цель clean.

--- a/projects/lab01/task13/Makefile
+++ b/projects/lab01/task13/Makefile
@@ -5,13 +5,15 @@ SUBDIRS = awesome-sort test-sort
 
 OUT_DIR := $(CURDIR)/../_build/make-build
 
-subdirs: $(SUBDIRS) | _out
-	$(CXX) -o $(OUT_DIR)/test-sort $(OUT_DIR)/test-sort.o $(OUT_DIR)/awesome-sort.a
+subdirs: $(SUBDIRS)
 
 $(SUBDIRS):
 	$(MAKE) -C $@ OUT_DIR=$(OUT_DIR)
 
-_out:
-	mkdir -p $(OUT_DIR)
-
 test-sort: awesome-sort
+
+
+.PHONY: clean
+
+clean:
+	rm -rf $(OUT_DIR)
