Поправил include внутри test-sort.

--- a/projects/lab01/task13/test-sort/Makefile
+++ b/projects/lab01/task13/test-sort/Makefile
@@ -1,13 +1,12 @@
 all: test-sort
 
-INC=-I../awesome-sort/
+CPPFLAGS += -I ../awesome-sort/
 
 test-sort: test-sort.o | _out
 	$(CXX) $(CPPFLAGS) $(CXXFLAGS) -o $(OUT_DIR)/test-sort $(OUT_DIR)/test-sort.o $(OUT_DIR)/awesome-sort.a
 
-
 test-sort.o: test-sort.cpp | _out
-	$(CXX) $(CPPFLAGS) $(CXXFLAGS) -c -o $(OUT_DIR)/$@  $(INC) $<
+	$(CXX) $(CPPFLAGS) $(CXXFLAGS) -c -o $(OUT_DIR)/$@ $<
 
 _out:
 	mkdir -p $(OUT_DIR)
